test/variables/export/export-var.good
export-var.chpl:1: error: Export variables are not yet supported
export-var.chpl:2: error: Export variables are not yet supported
