test/variables/export/export-var.chpl
export var x: int = 1;
export const x: int = 1;
